--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "$schema": "https://openapi.vercel.sh/vercel.json",
     "buildCommand": "chmod +x build.sh && ./build.sh",
-    "outputDirectory": "hugo-site/public",
+    "outputDirectory": "public",
     "installCommand": "echo 'Dependencies installed via build.sh'",
     "framework": null,
     "build": {
